# MulC

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  makefile  test_script.chai
src/: Flags.cpp  Flags.h  Mode.h  Mulc.ScriptAPI.cpp  Mulc.cpp  Mulc.h  Mulc.runScript.cpp  PathStack.cpp  PathStack.h  ProjectInfo.h  ScopePath.cpp  ScopePath.h  SystemInterface.cpp  SystemInterface.h  main.cpp  utils.h
